generated/checker-for-evaluation/generated/test-Uninit-Data-90ca6956d3834db4060f87700e2fcbb699c4e4fd/build_logs/1/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBeginFunction(clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:73:24: error: ‘class clang::ento::CheckerContext’ has no member named ‘getDecl’
   73 |      const Decl *D = C.getDecl();
      |                        ^~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:136:41: error: ‘MapTy’ is not a member of ‘clang::ento::ProgramStateTrait<{anonymous}::InitPointerMap>’
  136 |      ProgramStateTrait<InitPointerMap>::MapTy Map = *State->get<InitPointerMap>();
      |                                         ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:138:20: error: ‘Map’ was not declared in this scope
  138 |      for (auto I = Map.begin(), E = Map.end(); I != E; ++I) {
      |                    ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:138:53: error: ‘E’ was not declared in this scope
  138 |      for (auto I = Map.begin(), E = Map.end(); I != E; ++I) {
      |                                                     ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:150:31: error: ‘const class clang::ento::MemRegion’ has no member named ‘getDecl’
  150 |          Report->addRange(MR->getDecl()->getSourceRange());
      |                               ^~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
